--- a/style.css
+++ b/style.css
@@ -252,14 +252,24 @@ td:first-child {
     #contact-form button {
         width: 100%;
     }
-}
 
-/* Style for the video section */
+ /* Video section */
 #video-section {
     display: flex;
-    justify-content: center;  
-    align-items: center;      
-    flex-wrap: wrap;          
-    margin: 20px;             
-    padding: 20px;            
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 20px;
 }
+
+
+video {
+    width: 100%;
+    max-width: 800px; 
+    height: auto;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}          
+
